[package]
name = "sysguard-gui"
version = "0.2.0-rc.1"
description = "Sysguard"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
license = ""
repository = "https://github.com/ikey4u/sysguard"
default-run = "sysguard-gui"
edition = "2018"

[dependencies]
serde_json = "1.0"
errlog = "0.0.2"
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }
umya-spreadsheet = "0.3.0"
indoc = "1.0"
tempfile = "3.2.0"
fltk = { version = "1.2.19" }
fltk-theme = "0.4"

[dependencies.pnet]
version = "0.28.0"
